argocd/base/qui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qui
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: qui
  ports:
    - port: 7476
      targetPort: 7476
