argocd/base/qui/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qui
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qui.streamixs.com`)
      kind: Rule
      middlewares:
        - name: forward-auth
          namespace: auth
      services:
        - name: qui
          port: 7476
  tls: {}
